Fixed navbar stacking when too small

--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@
 }
 
 /* Navbar */
+
+.nav li {
+    display:inline;
+    float:left;
+}
+
 .nav li a {
     transition:color 0.5s ease-in-out, background-color 0.5s ease-in-out;
     transition:box-shadow 0.25s ease-in-out;
